# TrabajoGrupalGrupo6_EcuacionDeCalor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Code/: main.cpp
Fractal/: CMakeLists.txt  main.cpp  palette.h
TrabajoGrupalGrupo6_EcuacionCalor_openmp_simd_serial/: CMakeLists.txt  ecuacion_calor_openmp.cpp  ecuacion_calor_openmp.h  fractal_calor.cpp  fractal_calor.h  fractal_calor_simd.cpp  fractal_calor_simd.h  main.cpp
TrabajoGrupalGrupo6_EcuacionDeCalorMPI/: CMakeLists.txt  ecuacion_calor.cpp  ecuacion_calor.h  main.cpp
